# warpnine-fonts

./: .gitignore  Cargo.toml  README.md  benchmark.py  benchmark_pipeline.py  preview.html  pyproject.toml
.github/workflows/: pages.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: build_vf.rs  calt.rs  clean.rs  cli.rs  condense.rs  copy_table.rs  dev.rs  download.rs  font_ops.rs  freeze.rs  instance.rs  io.rs  lib.rs  ligatures.rs  main.rs  merge.rs  metadata.rs  naming.rs  parallel.rs  pipeline.rs  sans.rs  styles.rs  subset.rs
crates/cli/src/commands/: build.rs  download.rs  mod.rs
crates/cli/src/warpnine/: condense.rs  sans.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  freeze_batch.rs  io.rs  lib.rs  merge.rs
crates/core/src/pipeline/: download.rs  mod.rs  steps.rs  vf.rs
crates/core/src/styles/: design.rs  features.rs
crates/core/src/warpnine/: calt.rs  condense.rs  ligatures.rs  naming.rs  sans.rs
crates/feature-freezer/src/: error.rs  font.rs  gsub.rs  lib.rs  main.rs  types.rs
crates/feature-freezer/tests/: integration_test.rs
crates/font-condense/src/: lib.rs
crates/font-freezer/src/: font.rs  gsub.rs  main.rs
crates/font-freezer/tests/: integration_test.rs
crates/font-instancer/src/: instancer.rs  main.rs
crates/font-merger/src/: context.rs  convert.rs  glyph_order.rs  main.rs  merger.rs  strategies.rs  types.rs
crates/font-merger/src/tables/: cff.rs  cmap.rs  glyf.rs  head.rs  hhea.rs  hmtx.rs  layout.rs  layout_types.rs  os2.rs  post.rs  vhea.rs  vmtx.rs
crates/font-merger/tests/: integration_tests.rs
crates/font-metadata/src/: lib.rs
crates/font-ops/: Cargo.toml
crates/font-ops/src/: lib.rs
crates/font-ops/tests/: apply_style.rs
crates/font-subsetter/src/: lib.rs
crates/font-vf-builder/: Cargo.toml
crates/font-vf-builder/src/: variation_model.rs  vf_builder.rs
crates/font-woff2/: Cargo.toml
crates/font-woff2/src/: lib.rs
crates/instancer/: Cargo.toml
crates/instancer/src/: error.rs  instancer.rs  lib.rs  main.rs
crates/merger/: Cargo.toml
crates/merger/src/: context.rs  convert.rs  error.rs  glyph_order.rs  lib.rs  main.rs  merger.rs  options.rs  types.rs
crates/merger/src/tables/: cff.rs  cmap.rs  glyf.rs  head.rs  hhea.rs  hint.rs  hmtx.rs  layout.rs  layout_types.rs  maxp.rs  name.rs  os2.rs  post.rs  vhea.rs  vmtx.rs
crates/merger/tests/: integration_tests.rs
crates/vf-builder/: Cargo.toml
crates/vf-builder/src/: designspace.rs  error.rs  lib.rs  variation_model.rs  vf_builder.rs
crates/warpnine-core/src/: freeze.rs  io.rs  lib.rs  parallel.rs  styles.rs
crates/warpnine-core/src/pipeline/: download.rs  mod.rs  steps.rs  vf.rs
crates/warpnine-core/src/styles/: design.rs  instances.rs  mod.rs
crates/warpnine-core/src/warpnine/: sans.rs
docs/: VALIDATION.md  generate-sample.sh  index.html  sample.typ  vf-builder-handoff.md
rust/warpnine-fonts/: Cargo.toml  IMPLEMENTATION_PLAN.md  VALIDATION.md
rust/warpnine-fonts/src/: calt.rs  clean.rs  condense.rs  copy_table.rs  download.rs  freeze.rs  instance.rs  ligatures.rs  main.rs  merge.rs  metadata.rs  naming.rs  sans.rs  subset.rs
src/: __init__.py  all.py  build_recursive_vf.py  build_variable.py  build_variable_test.py  clean.py  copy_gsub_to_vf.py  create_condensed.py  create_sans.py  download_fonts.py  extract_duotone.py  extract_linear_glyphs.py  extract_recursive_vf.py  extract_weights.py  freeze_features.py  freeze_vf_features.py  logger.py  merge.py  normalize_gsub.py  paths.py  preserve_ligatures.py  remove_ligatures.py  set_monospace.py  set_version.py  subset.py  test.py
tests/: __init__.py  conftest.py  validate_rust_output.py  woff2-test.html
tests/integration/: test_font_output_validation.py  test_rust_cli.py
tests/unit/: test_instances.py  test_naming.py
warpnine_fonts/: __init__.py
warpnine_fonts/cli/: __init__.py  main.py
warpnine_fonts/config/: __init__.py  features.py  instances.py  paths.py  unicode_ranges.py
warpnine_fonts/core/: __init__.py  font_io.py  gsub.py  instancer.py  metrics.py  naming.py
warpnine_fonts/operations/: __init__.py  download.py  extract.py  freeze.py  merge.py  metadata.py  sans.py  subset.py  variable.py
warpnine_fonts/pipeline/: runner.py  validate.py
warpnine_fonts/utils/: __init__.py  logging.py  subprocess.py
