[package]
name = "warpnine-font-woff2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "WOFF2 conversion with automatic problematic glyph handling"

[dependencies]
anyhow.workspace = true
read-fonts.workspace = true
hb-subset.workspace = true
ttf2woff2 = { git = "https://github.com/0x6b/ttf2woff2", tag = "v0.10.1" }

[dev-dependencies]
anyhow.workspace = true
