[package]
name = "warpnine-fonts"
version = "0.1.0"
edition = "2024"
description = "Fast font metadata operations for Warpnine fonts"

[dependencies]
clap = { version = "4", features = ["derive"] }
read-fonts = "0.36"
write-fonts = "0.44"
hb-subset = { version = "0.3", features = ["bundled"] }
anyhow = "1"
chrono = "0.4"
rayon = "1.10"

[[bin]]
name = "warpnine-fonts"
path = "src/main.rs"
