[package]
name = "warpnine-fonts"
version = "0.1.0"
edition = "2024"
description = "Fast font metadata operations for Warpnine fonts"

[dependencies]
clap = { version = "4", features = ["derive"] }
read-fonts = "0.36"
write-fonts = "0.44"
hb-subset = { version = "0.3", features = ["bundled"] }
anyhow = "1"
chrono = "0.4"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"

# Local font processing crates
font-feature-freezer = { path = "../../../font-feature-freezer", default-features = false }
font-instancer = { path = "../../../font-instancer", default-features = false }
font-merger = { path = "../../../font-merger" }

[[bin]]
name = "warpnine-fonts"
path = "src/main.rs"
